--- a/BertScout2025/BertScout2025.csproj
+++ b/BertScout2025/BertScout2025.csproj
@@ -38,6 +38,7 @@
 		<!-- <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion> -->
 		<Version>0.0.1</Version>
 		<DefaultLanguage>en</DefaultLanguage>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-android|AnyCPU'">
